<resources>
	<string name="app_name">Event Reminder</string>

	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">@string/app_name</string>
	<string name="nav_header_subtitle">Support: yuralisovskiy98@gmail.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="nav_calendar">Calendar</string>
	<string name="nav_settings">Settings…</string>
	<string name="nav_backup_and_restore">Backup and Restore…</string>
	<string name="nav_item_title_other">Other</string>
	<string name="nav_account">Account…</string>
	<string name="nav_about">About</string>
	<string name="nav_switch_night_mode">Night Mode</string>
	<string name="calendar_selected_date">Selected Date</string>
	<string name="title_activity_settings">Settings</string>

	<string-array name="languages_array">
		<item>English</item>
		<item>Українська</item>
	</string-array>

	<string-array name="remind_before_event_units_array">
		<item>Minutes</item>
		<item>Hours</item>
		<item>Days</item>
		<item>Weeks</item>
	</string-array>

	<string name="prefs_title_application">Application</string>
	<string name="prefs_title_events">Events</string>
	<string name="prefs_language">Language</string>
	<string name="prefs_maximum_backups_number">Maximum backups number</string>
	<string name="prefs_remove_event_after_time_up">Remove event after time up</string>
	<string name="prefs_auto_start">Auto start</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="prefs_backup_settings">Backup settings</string>
	<string name="prefs_remind_time_before_event">Remind time before event</string>

	<string name="title_activity_account">Account</string>
	<string name="tab_login">Sign In</string>
	<string name="tab_register">Register</string>
	<string name="tab_reset_password">Reset Password</string>
	<string name="button_sign_in">Sign In</string>
	<string name="button_sign_up">Register</string>
	<string name="error_invalid_email">Email address is invalid</string>
	<string name="error_invalid_password">Password is invalid</string>
	<string name="error_incorrect_credentials">Incorrect credentials</string>
	<string name="error_field_required">This field is required</string>
	<string name="error_invalid_username">User name is invalid</string>
	<string name="password">Password</string>
	<string name="email">Email</string>
	<string name="username">Username</string>
	<string name="button_sign_out">Sign Out</string>
	<string name="remember_me">Remember me</string>
	<string name="title_activity_event">%1$s event</string>
	<string name="event_title">Title</string>
	<string name="event_description">Description (optional)</string>
	<string name="time_picker_description">Time picker button</string>
	<string name="date_picker_description">Date picker button</string>
	<string name="register_success">Check out your email box for credentials</string>
	<string name="new_password">New password</string>
	<string name="new_password_repeat">Repeat password</string>
	<string name="button_reset_password">Reset</string>
	<string name="confirmation_code">Confirmation code</string>
	<string name="button_confirm_reset">Confirm</string>
	<string name="error_invalid_confirmation_code">Incorrect confirmation code</string>
	<string name="error_repeat_password_failed">Field must repeat new password</string>
	<string name="account_rpf_reset_success">Password has been reset, try to log in</string>
	<string name="account_rpf_enter_code">Enter code</string>
	<string name="account_rpf_enter_code_details">
		We\'ve send an email with an activation code to your address %1$s.
	</string>
	<string name="event_repeat_weekly">Repeat weekly</string>
	<string name="create">Create</string>
	<string name="edit">Edit</string>
	<string name="event_create_success">Event has been created</string>
	<string name="event_update_success">Event has been updated</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="no_event_to_edit">Select event to edit</string>
	<string name="no_event_to_delete">Select event to delete</string>
	<string name="cancel">Cancel</string>
	<string name="event_delete_confirmation">After pressing OK the event can not be restored. Are you sure you want to remove this event?</string>
	<string name="delete">Delete</string>
	<string name="invalid_creation_time">Can not create past event</string>
	<string name="dismiss_details_dialog">Dismiss details dialog</string>
	<string name="details">Details</string>
	<string name="app_distro_user_info">Copy of this software is distributed to %1$s.</string>
	<string name="app_build_date">Released on %1$s.</string>
	<string name="app_version_number">Version %1$s.</string>
	<string name="title_activity_backup_and_restore">Backup and Restore</string>
	<string name="local_storage">Local Storage</string>
	<string name="cloud_storage">Cloud</string>
	<string name="no_backups">No backups</string>
	<string name="restore">Restore</string>
	<string name="cloud_storage_login_required">Log in to Your account to enable cloud storage</string>
	<string name="backup_and_restore_excluded_settings">excluded settings.</string>
	<string name="backup_and_restore_events_count">%1$d event%2$s,</string>
	<string name="backup_and_restore_full_backup">full backup</string>
	<string name="backup_and_restore_already_exists">This backup already exists</string>
	<string name="result">Result</string>
	<string name="backup_and_restore_created">Backup has been created</string>
	<string name="backup_and_restore_no_backup_to_delete">Select backup to delete</string>
	<string name="backup_and_restore_no_backup_to_restore">Select backup to restore</string>
	<string name="removing_backup">Removing backup, please wait…</string>
	<string name="backuping_data">Backuping data, please wait…</string>
	<string name="backup_remove_confirmation">After pressing OK, this action can not be undone. Do you want to remove this backup?</string>
	<string name="backup_does_not_exist">Backup does not exist</string>
	<string name="restoring_backup">Restoring backup, please wait…</string>
	<string name="restart_confirmation">An application will be restarted in order to apply all restored settings</string>
	<string name="restore_backup">Restore backup</string>
	<string name="unable_to_restore_backup">Unable to restore backup, because it is in invalid format</string>
	<string name="background_service_name" translatable="false">Event Reminder Notifications</string>
	<string name="waiting_for_network">Waiting for Network…</string>
	<string name="new_notifications">new%1$s notifications%2$s</string>
	<string name="network_is_not_available">Network is not available</string>
</resources>
