<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:showIn="navigation_view"
	android:id="@+id/main_drawer_menu">
	<group android:checkableBehavior="none">
		<item
			android:id="@+id/nav_calendar"
			android:icon="@drawable/ic_menu_calendar"
			android:title="@string/nav_calendar" />
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_menu_settings"
			android:title="@string/nav_settings" />
		<item
			android:id="@+id/nav_backup_and_restore"
			android:icon="@drawable/ic_menu_backup_and_restore"
			android:title="@string/nav_backup_and_restore" />
	</group>
	<item android:title="@string/nav_item_title_other">
		<menu>
			<item
				android:id="@+id/nav_account"
				android:icon="@drawable/ic_menu_account"
				android:title="@string/nav_account" />
			<item
				android:id="@+id/nav_about"
				android:icon="@drawable/ic_menu_about"
				android:title="@string/nav_about" />
		</menu>
	</item>
	<item
		android:id="@+id/nav_switch"
		android:icon="@drawable/ic_night_mode"
		android:title="@string/nav_switch_night_mode"
		app:actionViewClass="android.widget.Switch"
		android:checkable="false"/>
</menu>
