<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".SettingsActivity"
	tools:showIn="@layout/activity_settings">
	<ProgressBar
		android:id="@+id/settings_progress_bar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:text="@string/prefs_title_application"/>
				<View
					style="@style/Divider"
					android:paddingBottom="10dp"/>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:orientation="horizontal">
					<TextView
						android:text="@string/prefs_language"
						android:layout_width="match_parent"
						android:padding="10dp"
						android:maxWidth="200dp"
						android:layout_height="wrap_content"/>
					<Spinner
						android:id="@+id/language_selection"
						android:layout_width="match_parent"
						android:padding="10dp"
						android:layout_marginStart="70dp"
						android:spinnerMode="dialog"
						android:textAlignment="center"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:orientation="horizontal">
					<TextView
						android:text="@string/prefs_auto_start"
						android:padding="10dp"
						android:maxWidth="200dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
					<Switch
						android:id="@+id/auto_start"
						android:padding="10dp"
						android:textAlignment="viewEnd"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:orientation="horizontal">
					<TextView
						android:text="@string/prefs_backup_settings"
						android:padding="10dp"
						android:maxWidth="200dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
					<Switch
						android:id="@+id/backup_settings"
						android:padding="10dp"
						android:textAlignment="viewEnd"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:layout_margin="10dp"
					android:orientation="horizontal">
					<TextView
						android:text="@string/prefs_maximum_backups_number"
						android:padding="10dp"
						android:maxWidth="200dp"
						android:gravity="center_vertical"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"/>
					<NumberPicker
						android:id="@+id/max_backups"
						android:orientation="vertical"
						android:descendantFocusability="blocksDescendants"
						android:layout_weight="1"
						android:layout_marginStart="50dp"
						android:layout_marginEnd="10dp"
						android:layout_width="0dp"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:text="@string/prefs_title_events"/>
				<View style="@style/Divider"/>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">
					<TextView
						android:text="@string/prefs_remove_event_after_time_up"
						android:padding="10dp"
						android:maxWidth="200dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
					<Switch
						android:id="@+id/remove_event_after_time_up"
						android:padding="10dp"
						android:textAlignment="viewEnd"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">
					<TextView
						android:text="@string/prefs_remind_time_before_event"
						android:padding="10dp"
						android:maxWidth="200dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
					<NumberPicker
						android:id="@+id/remind_time_before_event_number"
						android:orientation="vertical"
						android:descendantFocusability="blocksDescendants"
						android:layout_weight="1"
						android:layout_marginStart="10dp"
						android:layout_width="0dp"
						android:layout_height="wrap_content"/>
					<NumberPicker
						android:id="@+id/remind_time_before_event_units"
						android:orientation="vertical"
						android:descendantFocusability="blocksDescendants"
						android:layout_weight="1"
						android:layout_marginEnd="10dp"
						android:layout_width="0dp"
						android:layout_height="wrap_content"/>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>

</android.support.constraint.ConstraintLayout>
