<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	app:layout_behavior="com.yuralisovskiy.er.Fragments.ResetPasswordFragment.FixedAppBarLayoutBehavior"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".Fragments.ResetPasswordFragment">

	<ProgressBar
		android:id="@+id/register_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone" />

	<ScrollView
		android:id="@+id/reset_password_view"
		android:layout_marginTop="20dp"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/reset_password_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<AutoCompleteTextView
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true">
				</AutoCompleteTextView>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/new_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/new_password"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true">
				</EditText>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/new_password_repeat"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/new_password_repeat"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true">
				</EditText>

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/reset_password_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/button_reset_password"
				android:textStyle="bold" />

		</LinearLayout>
	</ScrollView>

	<ScrollView
		android:id="@+id/confirm_reset_password_view"
		android:layout_marginTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/confirm_reset_password_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<com.yuriylisovskiy.er.Widgets.PinEditText
					android:id="@+id/confirmation_code"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/confirmation_code"
					android:cursorVisible="false"
					android:digits="1234567890"
					android:inputType="number"
					android:maxLength="6"
					android:textSize="20sp"
					android:textIsSelectable="false">
				</com.yuriylisovskiy.er.Widgets.PinEditText>

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/confirm_reset_password_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/button_confirm_reset"
				android:textStyle="bold" />

		</LinearLayout>
	</ScrollView>

</LinearLayout>
