<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	app:layout_behavior="com.yuralisovskiy.er.Fragments.LoginFragment.FixedAppBarLayoutBehavior"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".Fragments.LoginFragment">
	<ProgressBar
		android:id="@+id/account_sif_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone" />
	<ScrollView
		android:id="@+id/account_sif_form"
		android:layout_marginTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<EditText
					android:id="@+id/account_sif_username"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/username"
					android:inputType="text"
					android:maxLines="1"
					android:imeOptions="actionNext"
					android:singleLine="true">
				</EditText>
			</android.support.design.widget.TextInputLayout>
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<EditText
					android:id="@+id/account_sif_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password"
					android:imeOptions="actionSend"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true">
				</EditText>
			</android.support.design.widget.TextInputLayout>
			<CheckBox android:id="@+id/account_sif_remember_me"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/remember_me"/>
			<Button
				android:id="@+id/account_sif_sign_in_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/button_sign_in"
				android:textStyle="bold" />
		</LinearLayout>
	</ScrollView>
	<ScrollView
		android:id="@+id/account_sif_user_profile"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/account_sif_profile_name"
				android:layout_width="match_parent"
				android:layout_margin="20dp"
				android:textSize="22sp"
				android:textAlignment="center"
				android:layout_height="wrap_content"/>
			<TextView
				android:layout_marginBottom="10dp"
				android:textAlignment="center"
				android:id="@+id/account_sif_profile_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<Button
				android:id="@+id/account_sif_sign_out_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:text="@string/button_sign_out"
				android:textStyle="bold" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
