<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".BackupAndRestoreActivity"
	tools:showIn="@layout/activity_backup_and_restore"
	android:orientation="vertical">

	<RadioGroup
		android:id="@+id/storage_switch"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:checkedButton="@+id/local_storage" >
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/local_storage"
			android:layout_marginEnd="20dp"
			android:text="@string/local_storage" />
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cloud_storage"
			android:layout_marginStart="20dp"
			android:text="@string/cloud_storage" />
	</RadioGroup>

	<ProgressBar
		android:id="@+id/progress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:indeterminate="true"/>

	<TextView
		android:id="@+id/no_backups_text"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="@string/no_backups"
		android:textAlignment="center"
		android:layout_gravity="center_vertical"
		android:gravity="center_vertical"
		android:layout_marginBottom="100dp"
		android:textColor="?attr/colorTextMuted"
		android:textSize="24sp" />

	<ListView
		android:id="@+id/backups_list"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="5dp"
		android:layout_marginTop="30dp"
		android:listSelector="?attr/colorSelection">
	</ListView>

</LinearLayout>
