<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	app:layout_behavior="com.yuralisovskiy.er.Fragments.RegisterFragment.FixedAppBarLayoutBehavior"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".Fragments.RegisterFragment">
	<ProgressBar
		android:id="@+id/account_suf_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone" />
	<ScrollView
		android:id="@+id/account_suf_form"
		android:layout_marginTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<EditText
					android:id="@+id/account_suf_username"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/username"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:maxLines="1"
					android:singleLine="true">
				</EditText>
			</android.support.design.widget.TextInputLayout>
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<AutoCompleteTextView
					android:id="@+id/account_suf_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:imeOptions="actionSend"
					android:singleLine="true">
				</AutoCompleteTextView>
			</android.support.design.widget.TextInputLayout>
			<Button
				android:id="@+id/account_suf_sign_up_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/button_sign_up"
				android:textStyle="bold" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
