<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".EventActivity"
	tools:showIn="@layout/activity_event">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="20dp"
			android:orientation="vertical">
			<ProgressBar
				android:id="@+id/event_progress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<EditText
					android:id="@+id/event_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/event_title"
					android:inputType="text"
					android:maxLines="1"
					android:singleLine="true">
				</EditText>
			</android.support.design.widget.TextInputLayout>
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<EditText
					android:id="@+id/event_description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textMultiLine"
					android:overScrollMode="always"
					android:scrollbarStyle="insideInset"
					android:scrollbars="vertical"
					android:hint="@string/event_description"
					android:maxLines="6"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:scrollHorizontally="false" />
			</android.support.design.widget.TextInputLayout>
			<TextView
				android:id="@+id/event_date"
				android:textSize="16sp"
				android:layout_marginTop="20dp"
				android:gravity="center_vertical"
				android:drawableStart="@drawable/ic_date_range"
				android:drawablePadding="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/event_time"
				android:textSize="16sp"
				android:layout_marginTop="20dp"
				android:gravity="center_vertical"
				android:drawableStart="@drawable/ic_time_range"
				android:drawablePadding="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<CheckBox android:id="@+id/event_repeat_weekly"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="16sp"
				android:layout_marginTop="20dp"
				android:drawablePadding="20dp"
				android:button="@null"
				android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
				android:drawableStart="@drawable/ic_repeat"
				android:text="@string/event_repeat_weekly"/>
		</LinearLayout>
	</ScrollView>
</android.support.constraint.ConstraintLayout>
